# dagger-githubactions

./: .gitignore  Project_Plan.md  README.md  app.py  dagger.json  dagger.py  pyproject.toml  requirements.txt  test_app.py
.dagger/: app.py  pyproject.toml  src.py
.dagger/src/nine/: __init__.py  main.py
.github/workflows/: ci.yml
