# Dagger uses this file to detect the module
# and make functions available via dagger call

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nine"
version = "0.1.0"
dependencies = [
    "dagger-io>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src.py"]

[project.entry-points."dagger.mod"]
main_object = "src:Nine"